--- a/LatihanSoal/Views/Pelanggan/Create.cshtml
+++ b/LatihanSoal/Views/Pelanggan/Create.cshtml
@@ -50,40 +50,58 @@
             var Nama = document.getElementById("Nama").value;
             var Alamat = document.getElementById("Alamat").value;
             var NoTelp = document.getElementById("NoTelp").value;
-            var url = "@Url.Action("Save")";
-            var formData = new FormData();
-            formData.append("Nama", Nama)
-            formData.append("Alamat", Alamat)
-            formData.append("NoTelp", NoTelp)
+            if(Nama.length>0 && Alamat.length>0 && NoTelp.length>0){
+                var url = "@Url.Action("Save")";
+                var formData = new FormData();
+                formData.append("Nama", Nama)
+                formData.append("Alamat", Alamat)
+                formData.append("NoTelp", NoTelp)
 
-            //custom.showLoading();
+                //custom.showLoading();
 
-            $.ajax({
-                url: url,
-                enctype: 'multipart/form-data',
-                type: "POST",
-                data: formData,
-                processData: false,
-                contentType: false,
-                success: function (result) {
-                    if (result.isSucceed) {
-                        $("#CreateWindow").data("kendoWindow").close();
-                        //custom.hideLoading();
-                        swal("Success", result.message, {
-                            icon: "success"
-                        }).then(function() {
-                            window.location.reload();
-                        });
-                        //Pelanggan.table.ajax.reload();
+                $.ajax({
+                    url: url,
+                    enctype: 'multipart/form-data',
+                    type: "POST",
+                    data: formData,
+                    processData: false,
+                    contentType: false,
+                    success: function (result) {
+                        if (result.isSucceed) {
+                            $("#CreateWindow").data("kendoWindow").close();
+                            //custom.hideLoading();
+                            swal("Success", result.message, {
+                                icon: "success"
+                            }).then(function() {
+                                window.location.reload();
+                            });
+                            //Pelanggan.table.ajax.reload();
+                        }
+                        else {
+                            //custom.hideLoading();
+                            swal("Something Wrong", result.message, {
+                                icon: "error"
+                            });
+                        }
                     }
-                    else {
-                        //custom.hideLoading();
-                        swal("Something Wrong", result.message, {
-                            icon: "error"
-                        });
-                    }
+                });
+            }else{
+                var pesan="";
+                if(Nama.length==0){
+                    pesan+="Nama masih kosong, ";
                 }
-            });
+                if(Alamat.length==0){
+                    pesan+="Alamat masih kosong, ";
+                }
+                if(NoTelp.length==0){
+                    pesan+=" Nomor Telp masih kosong";
+                }
+                swal("Data belum lengkap", pesan, {
+                    icon: "error"
+                });
+
+            }
+
         };
 
         return Pelanggan;
