--- a/LatihanSoal/Views/Shared/_Layout.cshtml
+++ b/LatihanSoal/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+@*                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Bag1" asp-action="index">1 2 Hop!</a>
                         </li>
                         <li class="nav-item">
@@ -30,7 +30,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Bag1" asp-action="soal1C">Kamus Panda</a>
                         </li>
-                        <li class="nav-item">
+*@                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Pelanggan" asp-action="Index">Pelanggan</a>
                         </li>
                         <li class="nav-item">
